--- a/src/pages/about-me/about-me.style.css
+++ b/src/pages/about-me/about-me.style.css
@@ -14,8 +14,19 @@
 
     div {
         height: calc(100svh - 8rem - 6rem);
-        overflow: scroll;
         aspect-ratio: 4/5;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        overflow-wrap: break-word
+    }
 
+    div::-webkit-scrollbar {
+        width: 1rem;
+    }
+
+    div::-webkit-scrollbar-thumb {
+        background-color: rgba(var(--primary), 0.5);
+        border: 2px solid rgba(var(--text), 0.2);
+        border-radius: 10px;
     }
 }
